--- a/backend/VEMSBackEnd/VemsApi/appsettings.json
+++ b/backend/VEMSBackEnd/VemsApi/appsettings.json
@@ -3,11 +3,11 @@
     "Secret": "This is our project secret key - VEMS",
     "Issuer": "VEMS",
     "Audience": "VEMS",
-    "SmtpUser": "thanhduongjnguyen@gmail.com",
-    "SmtpPass": "zlla bjhk oilc vkmv",
+    "SmtpUser": "vems.edusystem@gmail.com",
+    "SmtpPass": "vxuj npca ckqa atiy",
     "SmtpPort": 587,
     "SmtpHost": "smtp.gmail.com",
-    "EmailFrom": "thanhduongjnguyen@gmail.com"
+    "EmailFrom": "vems.edusystem@gmail.com"
   },
   "Logging": {
     "LogLevel": {
