--- a/client/package.json
+++ b/client/package.json
@@ -13,26 +13,32 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tippyjs/react": "^4.2.6",
+    "axios": "^1.7.7",
     "eslint": "^8.57.1",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "i": "^0.3.7",
+    "mdb-react-ui-kit": "^9.0.0",
     "npm": "^10.8.3",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.0",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "sass": "^1.79.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
     "@eslint/js": "^9.9.0",
+    "@types/axios": "^0.14.0",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
