--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tippyjs/react": "^4.2.6",
+    "axios": "^1.7.7",
     "bootstrap-scss": "^5.3.3",
     "eslint": "^8.57.1",
     "eslint-plugin-jsx-a11y": "^6.10.0",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.0",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "sass": "^1.79.1"
   },
