--- a/backend/VEMSBackEnd/VemsApi/appsettings.json
+++ b/backend/VEMSBackEnd/VemsApi/appsettings.json
@@ -17,6 +17,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VEMS": "Server=THANHDUONG03\\DUONGNT;User ID=sa;Password=1;Database=VEMS;TrustServerCertificate=True"
+    "VEMS": "Server=LAPTOP-LOICUTE\\SQLEXP;User ID=sa;Password=123456;Database=VEMS;TrustServerCertificate=True"
   }
 }
