get attendance schedule of week for class,create, get, edit attendance for class api

--- a/backend/VEMSBackEnd/VemsApi/appsettings.json
+++ b/backend/VEMSBackEnd/VemsApi/appsettings.json
@@ -22,6 +22,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VEMS": "Server=WIN-APTX4869\\SqlExpress;User ID=sa;Password=123456;Database=VEMS;TrustServerCertificate=True"
+    //"VEMS": "Server=WIN-APTX4869\\SqlExpress;User ID=sa;Password=123456;Database=VEMS;TrustServerCertificate=True",
+    "VEMS": "Data Source=THANHDUONG03\\DUONGNT;User ID=sa;Password=1;Database=VEMS;Trust Server Certificate=True"
   }
 }
