--- a/backend/VEMSBackEnd/VemsApi/appsettings.json
+++ b/backend/VEMSBackEnd/VemsApi/appsettings.json
@@ -22,6 +22,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VEMS": "Server=WIN-APTX4869\\SqlExpress;User ID=sa;Password=123456;Database=VEMS;TrustServerCertificate=True"
+    "VEMS": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
   }
 }
