--- a/backend/VEMSBackEnd/VemsApi/appsettings.json
+++ b/backend/VEMSBackEnd/VemsApi/appsettings.json
@@ -23,6 +23,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"VEMS": "Server=WIN-APTX4869\\SqlExpress;User ID=sa;Password=123456;Database=VEMS;TrustServerCertificate=True",
-    "VEMS": "Data Source=THANHDUONG03\\DUONGNT;User ID=sa;Password=1;Database=VEMS;Trust Server Certificate=True"
+    //"VEMS": "Data Source=THANHDUONG03\\DUONGNT;User ID=sa;Password=1;Database=VEMS;Trust Server Certificate=True",
+    "VEMS": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
   }
 }
