--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/lab": "^6.0.0-beta.10",
+    "@mui/material": "^6.1.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tippyjs/react": "^4.2.6",
+    "@toolpad/core": "^0.7.0",
+    "@types/js-cookie": "^3.0.6",
+    "antd": "^5.21.2",
     "axios": "^1.7.7",
     "bootstrap-scss": "^5.3.3",
+    "cookie": "^0.7.1",
     "eslint": "^8.57.1",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "framer-motion": "^11.7.0",
     "i": "^0.3.7",
+    "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^9.0.0",
     "npm": "^10.8.3",
     "prettier": "^3.3.3",
@@ -28,12 +40,16 @@
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
-    "sass": "^1.79.1"
+    "rollup": "^4.22.5",
+    "sass": "^1.79.3",
+    "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
