--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
+    "redux-persist": "^6.0.0",
     "rollup": "^4.22.5",
     "sass": "^1.79.3",
     "universal-cookie": "^7.2.0"
@@ -58,6 +59,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-persist": "^4.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
