--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.7",
     "bootstrap-scss": "^5.3.3",
     "cookie": "^0.7.1",
+    "devextreme-react": "^24.1.6",
     "eslint": "^8.57.1",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
@@ -33,9 +34,11 @@
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^9.0.0",
+    "moment": "^2.30.1",
     "npm": "^10.8.3",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
@@ -58,6 +61,7 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
+    "@types/react-big-calendar": "^1.8.12",
     "@types/react-dom": "^18.3.0",
     "@types/redux-persist": "^4.0.0",
     "@vitejs/plugin-react": "^4.3.1",
