add personal object to redux

--- a/backend/VEMSBackEnd/VemsApi/appsettings.json
+++ b/backend/VEMSBackEnd/VemsApi/appsettings.json
@@ -22,6 +22,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VEMS": "Server=LAPTOP-LOICUTE\\SQLEXP;User ID=sa;Password=123456;Database=VEMS;TrustServerCertificate=True"
+    "VEMS": "Data Source=LAPTOP-LOICUTE\\SQLEXP;User ID=sa;Password=123456;Database=VEMS;Trust Server Certificate=True"
   }
 }
