--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/lab": "^6.0.0-beta.10",
     "@mui/material": "^6.1.2",
+    "@mui/x-data-grid": "^7.21.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tippyjs/react": "^4.2.6",
     "@toolpad/core": "^0.7.0",
