--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-cookie": "^7.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.53.0",
