--- a/backend/VEMSBackEnd/GradeClassroomService/appsettings.json
+++ b/backend/VEMSBackEnd/GradeClassroomService/appsettings.json
@@ -22,6 +22,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "VEMS": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
+    //"VEMS": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True",
+    "VEMS": "Data Source=LAPTOP-LOICUTE\\SQLEXP;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
   }
 }
