--- a/backend/VEMSBackEnd/ScheduleServiceVemsApi/appsettings.json
+++ b/backend/VEMSBackEnd/ScheduleServiceVemsApi/appsettings.json
@@ -23,7 +23,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // "VEMS": "Server=WIN-APTX4869\\SqlExpress;User ID=sa;Password=123456;Database=VEMS;TrustServerCertificate=True"
-    "VEMS": "Data Source=THANHDUONG03\\DUONGNT;User ID=sa;Password=1;Database=VEMS;Trust Server Certificate=True"
+    //"VEMS": "Data Source=THANHDUONG03\\DUONGNT;User ID=sa;Password=1;Database=VEMS;Trust Server Certificate=True",
     // "VEMS": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
+    "VEMS": "Data Source=LAPTOP-LOICUTE\\SQLEXP;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
   }
 }
