--- a/backend/VEMSBackEnd/VemsApi/appsettings.json
+++ b/backend/VEMSBackEnd/VemsApi/appsettings.json
@@ -22,8 +22,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"VEMS": "Server=THANHDUONG03\\DUONGNT;User ID=sa;Password=1;Database=VEMS;TrustServerCertificate=True",
-    // "VEMS": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
-    "VEMS": "Data Source=LAPTOP-LOICUTE\\SQLEXP;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
+    //"VEMS": "Server=THANHDUONG03\\DUONGNT;User ID=sa;Password=1;Database=VEMS;TrustServerCertificate=True"
+     "VEMS": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=VEMS;User ID=sa;Password=123456;TrustServerCertificate=True"
   }
 }
