--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "framer-motion": "^11.7.0",
+    "fs": "^0.0.1-security",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^9.0.0",
